parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ALIGNOF
    AND
    AND_BIT
    BECOME
    BOX
    BREAK
    BYTE
    CONTINUE
    CRATE
    DIVIDE
    DO
    ELSE
    ENUM
    EQUALS
    EXTERN
    FINAL
    IF
    IMPL
    INTEGER
    LEFT_MAYUS
    LESSEQUAL_THAN
    MACRO
    MATH_REMINDER
    MOD
    MOV
    NOT_EQUALS
    OFFSETOF
    OR
    OR_BIT
    OVERRIDE
    PLUS
    PRINTLN
    PRIV
    PROC
    PUB
    PURE
    QUO_MARKS
    REF
    RETURN
    RIGHT_MAYUS
    SELF
    SIZEOF
    STATIC
    SUPER
    TIMES
    TRAIT
    TYPEOF
    UNSAFE
    UNSIZED
    USE
    VIRTUAL
    WHERE
    WHILE
    XOR_BIT
    YIELD

Grammar

Rule 0     S' -> cuerpo
Rule 1     cuerpo -> linea
Rule 2     cuerpo -> linea cuerpo
Rule 3     linea -> asignacion
Rule 4     linea -> struct
Rule 5     linea -> varEnVar
Rule 6     linea -> definirFuncion
Rule 7     linea -> hashMap
Rule 8     linea -> vector
Rule 9     linea -> for
Rule 10    linea -> loop
Rule 11    linea -> eMatch
Rule 12    linea -> casting
Rule 13    linea -> alias
Rule 14    asignacion -> definicion ASSIGN valorAsignado COMMA_DOT
Rule 15    asignacion -> VARIABLE ASSIGN valorAsignado COMMA_DOT
Rule 16    asignacion -> VARIABLE ASSIGN varEnVar COMMA_DOT
Rule 17    asignacion -> definicion
Rule 18    varEnVar -> VARIABLE POINT VARIABLE
Rule 19    definicion -> creacion
Rule 20    definicion -> creacion COMMA_DOT
Rule 21    definicion -> creacion tipoDato
Rule 22    creacion -> LET MUT variables
Rule 23    creacion -> LET variables
Rule 24    creacion -> CONST variables
Rule 25    creacion -> LET MUT VARIABLE
Rule 26    creacion -> LET VARIABLE
Rule 27    creacion -> CONST VARIABLE
Rule 28    variables -> LPAREN conjuntoVariables RPAREN
Rule 29    conjuntoVariables -> VARIABLE COMA VARIABLE
Rule 30    conjuntoVariables -> VARIABLE COMA conjuntoVariables
Rule 31    tipoDato -> TWO_POINTS dato
Rule 32    tipoDato -> TWO_POINTS tipoDato
Rule 33    tipoDato -> dato LESS_THAN dato MORE_THAN
Rule 34    tipoDato -> TWO_POINTS apuntador
Rule 35    dato -> STRING
Rule 36    dato -> CHAR
Rule 37    dato -> DECIMAL
Rule 38    dato -> HEXADECIMAL
Rule 39    dato -> OCTAL
Rule 40    dato -> BINARIO
Rule 41    dato -> BOOL
Rule 42    dato -> FLOAT
Rule 43    dato -> VEC
Rule 44    dato -> GENERIC
Rule 45    valorAsignado -> dato
Rule 46    valorAsignado -> llamadaAfuncion
Rule 47    valorAsignado -> llamadaAfuncionPorAlias
Rule 48    valorAsignado -> vector
Rule 49    valorAsignado -> hashMap
Rule 50    valorAsignado -> LPAREN conjuntoDatos RPAREN
Rule 51    valorAsignado -> VARIABLE
Rule 52    conjuntoDatos -> dato COMA dato
Rule 53    conjuntoDatos -> dato COMA conjuntoDatos
Rule 54    llamadaAfuncionPorAlias -> VARIABLE POINT llamadaAfuncion
Rule 55    llamadaAfuncion -> VARIABLE argumentos
Rule 56    llamadaAfuncion -> VARIABLE argumentos POINT llamadaAfuncion
Rule 57    llamadaAfuncion -> VARIABLE TWO_POINTS TWO_POINTS argumentos
Rule 58    llamadaAfuncion -> VARIABLE TWO_POINTS TWO_POINTS
Rule 59    llamadaAfuncion -> VARIABLE TWO_POINTS TWO_POINTS llamadaAfuncion
Rule 60    argumentos -> LPAREN argumento RPAREN
Rule 61    argumentos -> LPAREN RPAREN
Rule 62    argumento -> VARIABLE
Rule 63    argumento -> dato
Rule 64    argumento -> VARIABLE COMA argumento
Rule 65    argumento -> dato COMA argumento
Rule 66    argumento -> llamadaAfuncion
Rule 67    argumento -> llamadaAfuncionPorAlias
Rule 68    argumento -> llamadaAfuncion COMA argumento
Rule 69    argumento -> llamadaAfuncionPorAlias COMA argumento
Rule 70    definirFuncion -> FN VARIABLE trait parametros LKEY cuerpoFuncion RKEY
Rule 71    definirFuncion -> FN VARIABLE parametros LKEY cuerpoFuncion RKEY
Rule 72    trait -> LESS_THAN GENERIC TWO_POINTS VARIABLE MORE_THAN
Rule 73    datoARetornar -> MINUS MORE_THAN dato
Rule 74    datoARetornar -> MINUS MORE_THAN NOT
Rule 75    datoARetornar -> MINUS MORE_THAN tipoDato
Rule 76    parametros -> LPAREN RPAREN datoARetornar
Rule 77    parametros -> LPAREN parametro RPAREN datoARetornar
Rule 78    parametros -> LPAREN RPAREN
Rule 79    parametros -> LPAREN parametro RPAREN
Rule 80    parametro -> VARIABLE TWO_POINTS dato
Rule 81    parametro -> VARIABLE TWO_POINTS dato COMA parametro
Rule 82    parametro -> dato COMA parametro
Rule 83    parametro -> dato
Rule 84    cuerpoFuncion -> cuerpo
Rule 85    struct -> STRUCT VARIABLE LKEY atributos RKEY
Rule 86    atributos -> VARIABLE TWO_POINTS dato
Rule 87    atributos -> VARIABLE TWO_POINTS dato COMA atributos
Rule 88    vector -> VEC NOT LBRACKET datos RBRACKET
Rule 89    vector -> VEC TWO_POINTS TWO_POINTS NEW LPAREN RPAREN
Rule 90    vector -> VEC TWO_POINTS TWO_POINTS NEW LPAREN datos RPAREN
Rule 91    datos -> dato
Rule 92    datos -> dato COMA datos
Rule 93    hashMap -> HASHMAP TWO_POINTS TWO_POINTS NEW LPAREN RPAREN
Rule 94    for -> FOR VARIABLE IN rango LKEY cuerpoFuncion RKEY
Rule 95    rango -> DECIMAL POINT POINT DECIMAL
Rule 96    rango -> DECIMAL POINT POINT ASSIGN DECIMAL
Rule 97    eMatch -> MATCH VARIABLE LKEY content RKEY
Rule 98    content -> dato MOREEQUAL_THAN cuerpoFuncion
Rule 99    content -> dato MOREEQUAL_THAN cuerpoFuncion COMA content
Rule 100   loop -> LOOP LKEY cuerpoFuncion RKEY
Rule 101   apuntador -> FN parametros
Rule 102   casting -> dato AS dato
Rule 103   casting -> dato AS casting
Rule 104   casting -> VARIABLE AS dato
Rule 105   casting -> VARIABLE AS casting
Rule 106   alias -> TYPE VARIABLE ASSIGN dato COMMA_DOT

Terminals, with rules where they appear

ABSTRACT             : 
ALIGNOF              : 
AND                  : 
AND_BIT              : 
AS                   : 102 103 104 105
ASSIGN               : 14 15 16 96 106
BECOME               : 
BINARIO              : 40
BOOL                 : 41
BOX                  : 
BREAK                : 
BYTE                 : 
CHAR                 : 36
COMA                 : 29 30 52 53 64 65 68 69 81 82 87 92 99
COMMA_DOT            : 14 15 16 20 106
CONST                : 24 27
CONTINUE             : 
CRATE                : 
DECIMAL              : 37 95 95 96 96
DIVIDE               : 
DO                   : 
ELSE                 : 
ENUM                 : 
EQUALS               : 
EXTERN               : 
FINAL                : 
FLOAT                : 42
FN                   : 70 71 101
FOR                  : 94
GENERIC              : 44 72
HASHMAP              : 93
HEXADECIMAL          : 38
IF                   : 
IMPL                 : 
IN                   : 94
INTEGER              : 
LBRACKET             : 88
LEFT_MAYUS           : 
LESSEQUAL_THAN       : 
LESS_THAN            : 33 72
LET                  : 22 23 25 26
LKEY                 : 70 71 85 94 97 100
LOOP                 : 100
LPAREN               : 28 50 60 61 76 77 78 79 89 90 93
MACRO                : 
MATCH                : 97
MATH_REMINDER        : 
MINUS                : 73 74 75
MOD                  : 
MOREEQUAL_THAN       : 98 99
MORE_THAN            : 33 72 73 74 75
MOV                  : 
MUT                  : 22 25
NEW                  : 89 90 93
NOT                  : 74 88
NOT_EQUALS           : 
OCTAL                : 39
OFFSETOF             : 
OR                   : 
OR_BIT               : 
OVERRIDE             : 
PLUS                 : 
POINT                : 18 54 56 95 95 96 96
PRINTLN              : 
PRIV                 : 
PROC                 : 
PUB                  : 
PURE                 : 
QUO_MARKS            : 
RBRACKET             : 88
REF                  : 
RETURN               : 
RIGHT_MAYUS          : 
RKEY                 : 70 71 85 94 97 100
RPAREN               : 28 50 60 61 76 77 78 79 89 90 93
SELF                 : 
SIZEOF               : 
STATIC               : 
STRING               : 35
STRUCT               : 85
SUPER                : 
TIMES                : 
TRAIT                : 
TWO_POINTS           : 31 32 34 57 57 58 58 59 59 72 80 81 86 87 89 89 90 90 93 93
TYPE                 : 106
TYPEOF               : 
UNSAFE               : 
UNSIZED              : 
USE                  : 
VARIABLE             : 15 16 18 18 25 26 27 29 29 30 51 54 55 56 57 58 59 62 64 70 71 72 80 81 85 86 87 94 97 104 105 106
VEC                  : 43 88 89 90
VIRTUAL              : 
WHERE                : 
WHILE                : 
XOR_BIT              : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

alias                : 13
apuntador            : 34
argumento            : 60 64 65 68 69
argumentos           : 55 56 57
asignacion           : 3
atributos            : 85 87
casting              : 12 103 105
conjuntoDatos        : 50 53
conjuntoVariables    : 28 30
content              : 97 99
creacion             : 19 20 21
cuerpo               : 2 84 0
cuerpoFuncion        : 70 71 94 98 99 100
dato                 : 31 33 33 45 52 52 53 63 65 73 80 81 82 83 86 87 91 92 98 99 102 102 103 104 106
datoARetornar        : 76 77
datos                : 88 90 92
definicion           : 14 17
definirFuncion       : 6
eMatch               : 11
for                  : 9
hashMap              : 7 49
linea                : 1 2
llamadaAfuncion      : 46 54 56 59 66 68
llamadaAfuncionPorAlias : 47 67 69
loop                 : 10
parametro            : 77 79 81 82
parametros           : 70 71 101
rango                : 94
struct               : 4
tipoDato             : 21 32 75
trait                : 70
valorAsignado        : 14 15
varEnVar             : 5 16
variables            : 22 23 24
vector               : 8 48

Parsing method: LALR

state 0

    (0) S' -> . cuerpo
    (1) cuerpo -> . linea
    (2) cuerpo -> . linea cuerpo
    (3) linea -> . asignacion
    (4) linea -> . struct
    (5) linea -> . varEnVar
    (6) linea -> . definirFuncion
    (7) linea -> . hashMap
    (8) linea -> . vector
    (9) linea -> . for
    (10) linea -> . loop
    (11) linea -> . eMatch
    (12) linea -> . casting
    (13) linea -> . alias
    (14) asignacion -> . definicion ASSIGN valorAsignado COMMA_DOT
    (15) asignacion -> . VARIABLE ASSIGN valorAsignado COMMA_DOT
    (16) asignacion -> . VARIABLE ASSIGN varEnVar COMMA_DOT
    (17) asignacion -> . definicion
    (85) struct -> . STRUCT VARIABLE LKEY atributos RKEY
    (18) varEnVar -> . VARIABLE POINT VARIABLE
    (70) definirFuncion -> . FN VARIABLE trait parametros LKEY cuerpoFuncion RKEY
    (71) definirFuncion -> . FN VARIABLE parametros LKEY cuerpoFuncion RKEY
    (93) hashMap -> . HASHMAP TWO_POINTS TWO_POINTS NEW LPAREN RPAREN
    (88) vector -> . VEC NOT LBRACKET datos RBRACKET
    (89) vector -> . VEC TWO_POINTS TWO_POINTS NEW LPAREN RPAREN
    (90) vector -> . VEC TWO_POINTS TWO_POINTS NEW LPAREN datos RPAREN
    (94) for -> . FOR VARIABLE IN rango LKEY cuerpoFuncion RKEY
    (100) loop -> . LOOP LKEY cuerpoFuncion RKEY
    (97) eMatch -> . MATCH VARIABLE LKEY content RKEY
    (102) casting -> . dato AS dato
    (103) casting -> . dato AS casting
    (104) casting -> . VARIABLE AS dato
    (105) casting -> . VARIABLE AS casting
    (106) alias -> . TYPE VARIABLE ASSIGN dato COMMA_DOT
    (19) definicion -> . creacion
    (20) definicion -> . creacion COMMA_DOT
    (21) definicion -> . creacion tipoDato
    (35) dato -> . STRING
    (36) dato -> . CHAR
    (37) dato -> . DECIMAL
    (38) dato -> . HEXADECIMAL
    (39) dato -> . OCTAL
    (40) dato -> . BINARIO
    (41) dato -> . BOOL
    (42) dato -> . FLOAT
    (43) dato -> . VEC
    (44) dato -> . GENERIC
    (22) creacion -> . LET MUT variables
    (23) creacion -> . LET variables
    (24) creacion -> . CONST variables
    (25) creacion -> . LET MUT VARIABLE
    (26) creacion -> . LET VARIABLE
    (27) creacion -> . CONST VARIABLE

    VARIABLE        shift and go to state 15
    STRUCT          shift and go to state 16
    FN              shift and go to state 17
    HASHMAP         shift and go to state 18
    VEC             shift and go to state 19
    FOR             shift and go to state 20
    LOOP            shift and go to state 21
    MATCH           shift and go to state 22
    TYPE            shift and go to state 24
    STRING          shift and go to state 26
    CHAR            shift and go to state 27
    DECIMAL         shift and go to state 28
    HEXADECIMAL     shift and go to state 29
    OCTAL           shift and go to state 30
    BINARIO         shift and go to state 31
    BOOL            shift and go to state 32
    FLOAT           shift and go to state 33
    GENERIC         shift and go to state 34
    LET             shift and go to state 35
    CONST           shift and go to state 36

    cuerpo                         shift and go to state 1
    linea                          shift and go to state 2
    asignacion                     shift and go to state 3
    struct                         shift and go to state 4
    varEnVar                       shift and go to state 5
    definirFuncion                 shift and go to state 6
    hashMap                        shift and go to state 7
    vector                         shift and go to state 8
    for                            shift and go to state 9
    loop                           shift and go to state 10
    eMatch                         shift and go to state 11
    casting                        shift and go to state 12
    alias                          shift and go to state 13
    definicion                     shift and go to state 14
    dato                           shift and go to state 23
    creacion                       shift and go to state 25

state 1

    (0) S' -> cuerpo .



state 2

    (1) cuerpo -> linea .
    (2) cuerpo -> linea . cuerpo
    (1) cuerpo -> . linea
    (2) cuerpo -> . linea cuerpo
    (3) linea -> . asignacion
    (4) linea -> . struct
    (5) linea -> . varEnVar
    (6) linea -> . definirFuncion
    (7) linea -> . hashMap
    (8) linea -> . vector
    (9) linea -> . for
    (10) linea -> . loop
    (11) linea -> . eMatch
    (12) linea -> . casting
    (13) linea -> . alias
    (14) asignacion -> . definicion ASSIGN valorAsignado COMMA_DOT
    (15) asignacion -> . VARIABLE ASSIGN valorAsignado COMMA_DOT
    (16) asignacion -> . VARIABLE ASSIGN varEnVar COMMA_DOT
    (17) asignacion -> . definicion
    (85) struct -> . STRUCT VARIABLE LKEY atributos RKEY
    (18) varEnVar -> . VARIABLE POINT VARIABLE
    (70) definirFuncion -> . FN VARIABLE trait parametros LKEY cuerpoFuncion RKEY
    (71) definirFuncion -> . FN VARIABLE parametros LKEY cuerpoFuncion RKEY
    (93) hashMap -> . HASHMAP TWO_POINTS TWO_POINTS NEW LPAREN RPAREN
    (88) vector -> . VEC NOT LBRACKET datos RBRACKET
    (89) vector -> . VEC TWO_POINTS TWO_POINTS NEW LPAREN RPAREN
    (90) vector -> . VEC TWO_POINTS TWO_POINTS NEW LPAREN datos RPAREN
    (94) for -> . FOR VARIABLE IN rango LKEY cuerpoFuncion RKEY
    (100) loop -> . LOOP LKEY cuerpoFuncion RKEY
    (97) eMatch -> . MATCH VARIABLE LKEY content RKEY
    (102) casting -> . dato AS dato
    (103) casting -> . dato AS casting
    (104) casting -> . VARIABLE AS dato
    (105) casting -> . VARIABLE AS casting
    (106) alias -> . TYPE VARIABLE ASSIGN dato COMMA_DOT
    (19) definicion -> . creacion
    (20) definicion -> . creacion COMMA_DOT
    (21) definicion -> . creacion tipoDato
    (35) dato -> . STRING
    (36) dato -> . CHAR
    (37) dato -> . DECIMAL
    (38) dato -> . HEXADECIMAL
    (39) dato -> . OCTAL
    (40) dato -> . BINARIO
    (41) dato -> . BOOL
    (42) dato -> . FLOAT
    (43) dato -> . VEC
    (44) dato -> . GENERIC
    (22) creacion -> . LET MUT variables
    (23) creacion -> . LET variables
    (24) creacion -> . CONST variables
    (25) creacion -> . LET MUT VARIABLE
    (26) creacion -> . LET VARIABLE
    (27) creacion -> . CONST VARIABLE

    $end            reduce using rule 1 (cuerpo -> linea .)
    RKEY            reduce using rule 1 (cuerpo -> linea .)
    COMA            reduce using rule 1 (cuerpo -> linea .)
    VARIABLE        shift and go to state 15
    STRUCT          shift and go to state 16
    FN              shift and go to state 17
    HASHMAP         shift and go to state 18
    VEC             shift and go to state 19
    FOR             shift and go to state 20
    LOOP            shift and go to state 21
    MATCH           shift and go to state 22
    TYPE            shift and go to state 24
    STRING          shift and go to state 26
    CHAR            shift and go to state 27
    DECIMAL         shift and go to state 28
    HEXADECIMAL     shift and go to state 29
    OCTAL           shift and go to state 30
    BINARIO         shift and go to state 31
    BOOL            shift and go to state 32
    FLOAT           shift and go to state 33
    GENERIC         shift and go to state 34
    LET             shift and go to state 35
    CONST           shift and go to state 36

    linea                          shift and go to state 2
    cuerpo                         shift and go to state 37
    asignacion                     shift and go to state 3
    struct                         shift and go to state 4
    varEnVar                       shift and go to state 5
    definirFuncion                 shift and go to state 6
    hashMap                        shift and go to state 7
    vector                         shift and go to state 8
    for                            shift and go to state 9
    loop                           shift and go to state 10
    eMatch                         shift and go to state 11
    casting                        shift and go to state 12
    alias                          shift and go to state 13
    definicion                     shift and go to state 14
    dato                           shift and go to state 23
    creacion                       shift and go to state 25

state 3

    (3) linea -> asignacion .

    VARIABLE        reduce using rule 3 (linea -> asignacion .)
    STRUCT          reduce using rule 3 (linea -> asignacion .)
    FN              reduce using rule 3 (linea -> asignacion .)
    HASHMAP         reduce using rule 3 (linea -> asignacion .)
    VEC             reduce using rule 3 (linea -> asignacion .)
    FOR             reduce using rule 3 (linea -> asignacion .)
    LOOP            reduce using rule 3 (linea -> asignacion .)
    MATCH           reduce using rule 3 (linea -> asignacion .)
    TYPE            reduce using rule 3 (linea -> asignacion .)
    STRING          reduce using rule 3 (linea -> asignacion .)
    CHAR            reduce using rule 3 (linea -> asignacion .)
    DECIMAL         reduce using rule 3 (linea -> asignacion .)
    HEXADECIMAL     reduce using rule 3 (linea -> asignacion .)
    OCTAL           reduce using rule 3 (linea -> asignacion .)
    BINARIO         reduce using rule 3 (linea -> asignacion .)
    BOOL            reduce using rule 3 (linea -> asignacion .)
    FLOAT           reduce using rule 3 (linea -> asignacion .)
    GENERIC         reduce using rule 3 (linea -> asignacion .)
    LET             reduce using rule 3 (linea -> asignacion .)
    CONST           reduce using rule 3 (linea -> asignacion .)
    $end            reduce using rule 3 (linea -> asignacion .)
    RKEY            reduce using rule 3 (linea -> asignacion .)
    COMA            reduce using rule 3 (linea -> asignacion .)


state 4

    (4) linea -> struct .

    VARIABLE        reduce using rule 4 (linea -> struct .)
    STRUCT          reduce using rule 4 (linea -> struct .)
    FN              reduce using rule 4 (linea -> struct .)
    HASHMAP         reduce using rule 4 (linea -> struct .)
    VEC             reduce using rule 4 (linea -> struct .)
    FOR             reduce using rule 4 (linea -> struct .)
    LOOP            reduce using rule 4 (linea -> struct .)
    MATCH           reduce using rule 4 (linea -> struct .)
    TYPE            reduce using rule 4 (linea -> struct .)
    STRING          reduce using rule 4 (linea -> struct .)
    CHAR            reduce using rule 4 (linea -> struct .)
    DECIMAL         reduce using rule 4 (linea -> struct .)
    HEXADECIMAL     reduce using rule 4 (linea -> struct .)
    OCTAL           reduce using rule 4 (linea -> struct .)
    BINARIO         reduce using rule 4 (linea -> struct .)
    BOOL            reduce using rule 4 (linea -> struct .)
    FLOAT           reduce using rule 4 (linea -> struct .)
    GENERIC         reduce using rule 4 (linea -> struct .)
    LET             reduce using rule 4 (linea -> struct .)
    CONST           reduce using rule 4 (linea -> struct .)
    $end            reduce using rule 4 (linea -> struct .)
    RKEY            reduce using rule 4 (linea -> struct .)
    COMA            reduce using rule 4 (linea -> struct .)


state 5

    (5) linea -> varEnVar .

    VARIABLE        reduce using rule 5 (linea -> varEnVar .)
    STRUCT          reduce using rule 5 (linea -> varEnVar .)
    FN              reduce using rule 5 (linea -> varEnVar .)
    HASHMAP         reduce using rule 5 (linea -> varEnVar .)
    VEC             reduce using rule 5 (linea -> varEnVar .)
    FOR             reduce using rule 5 (linea -> varEnVar .)
    LOOP            reduce using rule 5 (linea -> varEnVar .)
    MATCH           reduce using rule 5 (linea -> varEnVar .)
    TYPE            reduce using rule 5 (linea -> varEnVar .)
    STRING          reduce using rule 5 (linea -> varEnVar .)
    CHAR            reduce using rule 5 (linea -> varEnVar .)
    DECIMAL         reduce using rule 5 (linea -> varEnVar .)
    HEXADECIMAL     reduce using rule 5 (linea -> varEnVar .)
    OCTAL           reduce using rule 5 (linea -> varEnVar .)
    BINARIO         reduce using rule 5 (linea -> varEnVar .)
    BOOL            reduce using rule 5 (linea -> varEnVar .)
    FLOAT           reduce using rule 5 (linea -> varEnVar .)
    GENERIC         reduce using rule 5 (linea -> varEnVar .)
    LET             reduce using rule 5 (linea -> varEnVar .)
    CONST           reduce using rule 5 (linea -> varEnVar .)
    $end            reduce using rule 5 (linea -> varEnVar .)
    RKEY            reduce using rule 5 (linea -> varEnVar .)
    COMA            reduce using rule 5 (linea -> varEnVar .)


state 6

    (6) linea -> definirFuncion .

    VARIABLE        reduce using rule 6 (linea -> definirFuncion .)
    STRUCT          reduce using rule 6 (linea -> definirFuncion .)
    FN              reduce using rule 6 (linea -> definirFuncion .)
    HASHMAP         reduce using rule 6 (linea -> definirFuncion .)
    VEC             reduce using rule 6 (linea -> definirFuncion .)
    FOR             reduce using rule 6 (linea -> definirFuncion .)
    LOOP            reduce using rule 6 (linea -> definirFuncion .)
    MATCH           reduce using rule 6 (linea -> definirFuncion .)
    TYPE            reduce using rule 6 (linea -> definirFuncion .)
    STRING          reduce using rule 6 (linea -> definirFuncion .)
    CHAR            reduce using rule 6 (linea -> definirFuncion .)
    DECIMAL         reduce using rule 6 (linea -> definirFuncion .)
    HEXADECIMAL     reduce using rule 6 (linea -> definirFuncion .)
    OCTAL           reduce using rule 6 (linea -> definirFuncion .)
    BINARIO         reduce using rule 6 (linea -> definirFuncion .)
    BOOL            reduce using rule 6 (linea -> definirFuncion .)
    FLOAT           reduce using rule 6 (linea -> definirFuncion .)
    GENERIC         reduce using rule 6 (linea -> definirFuncion .)
    LET             reduce using rule 6 (linea -> definirFuncion .)
    CONST           reduce using rule 6 (linea -> definirFuncion .)
    $end            reduce using rule 6 (linea -> definirFuncion .)
    RKEY            reduce using rule 6 (linea -> definirFuncion .)
    COMA            reduce using rule 6 (linea -> definirFuncion .)


state 7

    (7) linea -> hashMap .

    VARIABLE        reduce using rule 7 (linea -> hashMap .)
    STRUCT          reduce using rule 7 (linea -> hashMap .)
    FN              reduce using rule 7 (linea -> hashMap .)
    HASHMAP         reduce using rule 7 (linea -> hashMap .)
    VEC             reduce using rule 7 (linea -> hashMap .)
    FOR             reduce using rule 7 (linea -> hashMap .)
    LOOP            reduce using rule 7 (linea -> hashMap .)
    MATCH           reduce using rule 7 (linea -> hashMap .)
    TYPE            reduce using rule 7 (linea -> hashMap .)
    STRING          reduce using rule 7 (linea -> hashMap .)
    CHAR            reduce using rule 7 (linea -> hashMap .)
    DECIMAL         reduce using rule 7 (linea -> hashMap .)
    HEXADECIMAL     reduce using rule 7 (linea -> hashMap .)
    OCTAL           reduce using rule 7 (linea -> hashMap .)
    BINARIO         reduce using rule 7 (linea -> hashMap .)
    BOOL            reduce using rule 7 (linea -> hashMap .)
    FLOAT           reduce using rule 7 (linea -> hashMap .)
    GENERIC         reduce using rule 7 (linea -> hashMap .)
    LET             reduce using rule 7 (linea -> hashMap .)
    CONST           reduce using rule 7 (linea -> hashMap .)
    $end            reduce using rule 7 (linea -> hashMap .)
    RKEY            reduce using rule 7 (linea -> hashMap .)
    COMA            reduce using rule 7 (linea -> hashMap .)


state 8

    (8) linea -> vector .

    VARIABLE        reduce using rule 8 (linea -> vector .)
    STRUCT          reduce using rule 8 (linea -> vector .)
    FN              reduce using rule 8 (linea -> vector .)
    HASHMAP         reduce using rule 8 (linea -> vector .)
    VEC             reduce using rule 8 (linea -> vector .)
    FOR             reduce using rule 8 (linea -> vector .)
    LOOP            reduce using rule 8 (linea -> vector .)
    MATCH           reduce using rule 8 (linea -> vector .)
    TYPE            reduce using rule 8 (linea -> vector .)
    STRING          reduce using rule 8 (linea -> vector .)
    CHAR            reduce using rule 8 (linea -> vector .)
    DECIMAL         reduce using rule 8 (linea -> vector .)
    HEXADECIMAL     reduce using rule 8 (linea -> vector .)
    OCTAL           reduce using rule 8 (linea -> vector .)
    BINARIO         reduce using rule 8 (linea -> vector .)
    BOOL            reduce using rule 8 (linea -> vector .)
    FLOAT           reduce using rule 8 (linea -> vector .)
    GENERIC         reduce using rule 8 (linea -> vector .)
    LET             reduce using rule 8 (linea -> vector .)
    CONST           reduce using rule 8 (linea -> vector .)
    $end            reduce using rule 8 (linea -> vector .)
    RKEY            reduce using rule 8 (linea -> vector .)
    COMA            reduce using rule 8 (linea -> vector .)


state 9

    (9) linea -> for .

    VARIABLE        reduce using rule 9 (linea -> for .)
    STRUCT          reduce using rule 9 (linea -> for .)
    FN              reduce using rule 9 (linea -> for .)
    HASHMAP         reduce using rule 9 (linea -> for .)
    VEC             reduce using rule 9 (linea -> for .)
    FOR             reduce using rule 9 (linea -> for .)
    LOOP            reduce using rule 9 (linea -> for .)
    MATCH           reduce using rule 9 (linea -> for .)
    TYPE            reduce using rule 9 (linea -> for .)
    STRING          reduce using rule 9 (linea -> for .)
    CHAR            reduce using rule 9 (linea -> for .)
    DECIMAL         reduce using rule 9 (linea -> for .)
    HEXADECIMAL     reduce using rule 9 (linea -> for .)
    OCTAL           reduce using rule 9 (linea -> for .)
    BINARIO         reduce using rule 9 (linea -> for .)
    BOOL            reduce using rule 9 (linea -> for .)
    FLOAT           reduce using rule 9 (linea -> for .)
    GENERIC         reduce using rule 9 (linea -> for .)
    LET             reduce using rule 9 (linea -> for .)
    CONST           reduce using rule 9 (linea -> for .)
    $end            reduce using rule 9 (linea -> for .)
    RKEY            reduce using rule 9 (linea -> for .)
    COMA            reduce using rule 9 (linea -> for .)


state 10

    (10) linea -> loop .

    VARIABLE        reduce using rule 10 (linea -> loop .)
    STRUCT          reduce using rule 10 (linea -> loop .)
    FN              reduce using rule 10 (linea -> loop .)
    HASHMAP         reduce using rule 10 (linea -> loop .)
    VEC             reduce using rule 10 (linea -> loop .)
    FOR             reduce using rule 10 (linea -> loop .)
    LOOP            reduce using rule 10 (linea -> loop .)
    MATCH           reduce using rule 10 (linea -> loop .)
    TYPE            reduce using rule 10 (linea -> loop .)
    STRING          reduce using rule 10 (linea -> loop .)
    CHAR            reduce using rule 10 (linea -> loop .)
    DECIMAL         reduce using rule 10 (linea -> loop .)
    HEXADECIMAL     reduce using rule 10 (linea -> loop .)
    OCTAL           reduce using rule 10 (linea -> loop .)
    BINARIO         reduce using rule 10 (linea -> loop .)
    BOOL            reduce using rule 10 (linea -> loop .)
    FLOAT           reduce using rule 10 (linea -> loop .)
    GENERIC         reduce using rule 10 (linea -> loop .)
    LET             reduce using rule 10 (linea -> loop .)
    CONST           reduce using rule 10 (linea -> loop .)
    $end            reduce using rule 10 (linea -> loop .)
    RKEY            reduce using rule 10 (linea -> loop .)
    COMA            reduce using rule 10 (linea -> loop .)


state 11

    (11) linea -> eMatch .

    VARIABLE        reduce using rule 11 (linea -> eMatch .)
    STRUCT          reduce using rule 11 (linea -> eMatch .)
    FN              reduce using rule 11 (linea -> eMatch .)
    HASHMAP         reduce using rule 11 (linea -> eMatch .)
    VEC             reduce using rule 11 (linea -> eMatch .)
    FOR             reduce using rule 11 (linea -> eMatch .)
    LOOP            reduce using rule 11 (linea -> eMatch .)
    MATCH           reduce using rule 11 (linea -> eMatch .)
    TYPE            reduce using rule 11 (linea -> eMatch .)
    STRING          reduce using rule 11 (linea -> eMatch .)
    CHAR            reduce using rule 11 (linea -> eMatch .)
    DECIMAL         reduce using rule 11 (linea -> eMatch .)
    HEXADECIMAL     reduce using rule 11 (linea -> eMatch .)
    OCTAL           reduce using rule 11 (linea -> eMatch .)
    BINARIO         reduce using rule 11 (linea -> eMatch .)
    BOOL            reduce using rule 11 (linea -> eMatch .)
    FLOAT           reduce using rule 11 (linea -> eMatch .)
    GENERIC         reduce using rule 11 (linea -> eMatch .)
    LET             reduce using rule 11 (linea -> eMatch .)
    CONST           reduce using rule 11 (linea -> eMatch .)
    $end            reduce using rule 11 (linea -> eMatch .)
    RKEY            reduce using rule 11 (linea -> eMatch .)
    COMA            reduce using rule 11 (linea -> eMatch .)


state 12

    (12) linea -> casting .

    VARIABLE        reduce using rule 12 (linea -> casting .)
    STRUCT          reduce using rule 12 (linea -> casting .)
    FN              reduce using rule 12 (linea -> casting .)
    HASHMAP         reduce using rule 12 (linea -> casting .)
    VEC             reduce using rule 12 (linea -> casting .)
    FOR             reduce using rule 12 (linea -> casting .)
    LOOP            reduce using rule 12 (linea -> casting .)
    MATCH           reduce using rule 12 (linea -> casting .)
    TYPE            reduce using rule 12 (linea -> casting .)
    STRING          reduce using rule 12 (linea -> casting .)
    CHAR            reduce using rule 12 (linea -> casting .)
    DECIMAL         reduce using rule 12 (linea -> casting .)
    HEXADECIMAL     reduce using rule 12 (linea -> casting .)
    OCTAL           reduce using rule 12 (linea -> casting .)
    BINARIO         reduce using rule 12 (linea -> casting .)
    BOOL            reduce using rule 12 (linea -> casting .)
    FLOAT           reduce using rule 12 (linea -> casting .)
    GENERIC         reduce using rule 12 (linea -> casting .)
    LET             reduce using rule 12 (linea -> casting .)
    CONST           reduce using rule 12 (linea -> casting .)
    $end            reduce using rule 12 (linea -> casting .)
    RKEY            reduce using rule 12 (linea -> casting .)
    COMA            reduce using rule 12 (linea -> casting .)


state 13

    (13) linea -> alias .
